; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/iconv/extr_citrus_db_factory.c_put32.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/iconv/extr_citrus_db_factory.c_put32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._region = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct._region*, i64*, i32)* @put32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put32(%struct._region* %0, i64* %1, i32 %2) #0 {
  %4 = alloca %struct._region*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  store %struct._region* %0, %struct._region** %4, align 8
  store i64* %1, i64** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @htonl(i32 %7)
  store i32 %8, i32* %6, align 4
  %9 = load %struct._region*, %struct._region** %4, align 8
  %10 = load i64*, i64** %5, align 8
  %11 = load i64, i64* %10, align 8
  %12 = call i32 @_region_offset(%struct._region* %9, i64 %11)
  %13 = call i32 @memcpy(i32 %12, i32* %6, i32 4)
  %14 = load i64*, i64** %5, align 8
  %15 = load i64, i64* %14, align 8
  %16 = add i64 %15, 4
  store i64 %16, i64* %14, align 8
  ret void
}

declare dso_local i32 @htonl(i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @_region_offset(%struct._region*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
